--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         color: inherit;
       }
     </style>
-  </head>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
