--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FairPlay NIL</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <style>
       body {
         margin: 0;
-        font-family: 'Montserrat', sans-serif;
-        background-color: #121212;
-        color: white;
+        font-family: 'Inter', sans-serif;
+        background-color: #f4f4f4; /* Updated background */
+        color: #282f3d; /* Updated base text color */
       }
       a {
         text-decoration: none;
         color: inherit;
       }
     </style>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-</head>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
